--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "python.pythonPath": "C:\\Users\\amazi\\.virtualenvs\\CS-Build-Week-1-7VGrJgN7\\Scripts\\python.exe"
+    "python.pythonPath": "C:\\Users\\JoCo Mobile\\AppData\\Local\\Programs\\Python\\Python37\\python.exe"
 }
